ARMv7: running reduceStrength after lowerInt64 is not safe https://bugs.webkit.org/show_bug.cgi?id=282829

Reviewed by Justin Michaud.

Strength reduction may introduce Int64s so make sure lowerInt64 always
runs after it.

* Source/JavaScriptCore/b3/B3Generate.cpp:
(JSC::B3::generateToAir):

Canonical link: https://commits.webkit.org/286358@main